fix button z-index

--- a/styles.scss
+++ b/styles.scss
@@ -95,7 +95,7 @@ body {
   vertical-align: top;
   white-space: nowrap;
   width: 100%;
-  z-index: 9;
+  z-index: 1;
   border: 0;
   transition: box-shadow .2s;
 }
